# n26-mcp

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/n26_mcp/: auth.py  client.py  server.py
tests/: test_smoke.py
