[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n26-mcp"
version = "0.1.0"
description = "MCP server for N26 bank (read-only)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
n26-mcp = "n26_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/n26_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
