[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n26-mcp"
version = "0.1.0"
description = "MCP server for N26 bank (read-only)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Edoardo Beltramo" }]
keywords = ["mcp", "n26", "banking", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/regressEdo/n26-mcp"
Issues = "https://github.com/regressEdo/n26-mcp/issues"

[project.scripts]
n26-mcp = "n26_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/n26_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
